@@ -1,3 +1,8 @@
+26 Aug 2011: Wouter
+	- status control command shows the latest probe results (and exits).
+	- use full path for unbound-control (for install in /opt of unbound).
+	- icons at 22px on OSX.
+
 25 Aug 2011: Wouter
 	- OSX launchd and loginitem installed.
 
